deploy/030-DeploymentConfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: v1
  labels:
    app: v1
spec:
  strategy:
    type: Rolling
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - v1
        from:
          kind: ImageStreamTag
          namespace: hono-device-registry-api
          name: swagger-ui:latest
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: v1
  template:
    metadata:
      labels:
        app: v1
    spec:
      containers:
        - name: v1
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
