deploy/040-Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: v1
  labels:
    app: v1
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deploymentconfig: v1
