deploy/060-Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: v1
  labels:
    app: v1
spec:
  to:
    kind: Service
    name: v1
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
